# mock_ipc

./: README.md  diagram.plantuml
share_lib/app/include/: ProcessApp.h
share_lib/server/include/: Message.h  Server.h
test/abs/: CMakeLists.txt  abs.cpp
test/display/: CMakeLists.txt  display.cpp
test/ecu/: CMakeLists.txt  ecu.cpp
test/server/: CMakeLists.txt  server.cpp
